--- a/manifest.json
+++ b/manifest.json
@@ -22,5 +22,9 @@
       "matches": ["<all_urls>"],
       "js": ["content.js"]
     }
-  ]
+  ],
+  "background": {
+    "scripts": ["background.js"],
+    "persistent": false
+  }  
 }
